--- a/src/main/webapp/WEB-INF/snippets/group-list-item.jspx
+++ b/src/main/webapp/WEB-INF/snippets/group-list-item.jspx
@@ -3,9 +3,9 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:tiles="http://tiles.apache.org/tags-tiles"
 	xmlns:fmt="http://java.sun.com/jsp/jstl/fmt"
+	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
 	xmlns:spring="http://www.springframework.org/tags"
 	xmlns:util="urn:jsptagdir:/WEB-INF/tags/util">
-	<li><tiles:importAttribute /> <c:url
-			value="games/${gameGroup.id}" var="gameGroupUrl" /> <a
-		href="${gameGroupUrl}">${gameGroup.name}</a></li>
+	<li><tiles:importAttribute /> <c:url value="games/${gameGroup.id}" var="gameGroupUrl" /> <a href="${gameGroupUrl}">
+		 <spring:message code="game_group_${fn:toLowerCase(fn:replace(gameGroup.name,' ','_'))}" text="${gameGroup.name}" /></a></li>
 </jsp:root>
