--- a/src/main/webapp/WEB-INF/snippets/game-list-item-open.jspx
+++ b/src/main/webapp/WEB-INF/snippets/game-list-item-open.jspx
@@ -3,6 +3,7 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:tiles="http://tiles.apache.org/tags-tiles"
 	xmlns:fmt="http://java.sun.com/jsp/jstl/fmt"
+	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
 	xmlns:spring="http://www.springframework.org/tags"
 	xmlns:util="urn:jsptagdir:/WEB-INF/tags/util">
 	<tiles:importAttribute />
@@ -33,8 +34,9 @@
 					data-iconpos="notext" rel="external" class="placeBet">Save</a>
 			</form>
 		</div>
-		<h1 style="display: inline-block;">${game.teamHome.name} -
-			${game.teamAway.name}</h1>
+		<h1 style="display: inline-block;">
+			<spring:message code="team_${fn:toLowerCase(fn:replace(game.teamHome.name,' ','_'))}" text="${game.teamHome.name}" /> -
+			<spring:message code="team_${fn:toLowerCase(fn:replace(game.teamAway.name,' ','_'))}" text="${game.teamAway.name}" /></h1>
 		<br />
 		<p style="display: inline-block;">
 			<fmt:formatDate value="${game.kickOff}" type="both" timeStyle="short"
