--- a/src/main/webapp/WEB-INF/views/betusers/create.jspx
+++ b/src/main/webapp/WEB-INF/views/betusers/create.jspx
@@ -6,6 +6,7 @@
         <field:input field="username" id="c_eu_zomtec_em2012_domain_BetUser_username" max="30" min="3" required="true" z="QlsXGaGfkfSbpwj6VVV4Y5xwTcc="/>
         <field:textarea field="password" id="c_eu_zomtec_em2012_domain_BetUser_password" required="true" z="HSjroI6raSyVPYAm0QnoOXPUkGI="/>
         <field:select field="roles" id="c_eu_zomtec_em2012_domain_BetUser_roles" itemValue="id" items="${betuserroles}" multiple="true" path="/betuserroles" z="d2R64qa1uEabeXYto4CoEY9Zvd0="/>
+        <field:checkbox field="enabled" id="c_eu_zomtec_em2012_domain_BetUser_enabled" z="vZcn2sPV3OMIkUZAi/ZXatzWm/g="/>
     </form:create>
     <form:dependency dependencies="${dependencies}" id="d_eu_zomtec_em2012_domain_BetUser" render="${not empty dependencies}" z="mjwcvqv41/x/mPXxfIx5bHvsKLI="/>
 </div>
