--- a/src/main/webapp/WEB-INF/views/betusers/list.jspx
+++ b/src/main/webapp/WEB-INF/views/betusers/list.jspx
@@ -7,6 +7,7 @@
             <table:column id="c_eu_zomtec_em2012_domain_BetUser_username" property="username" z="8kXx/Ey6VN23YiOVzDrFILHOcm0="/>
             <table:column id="c_eu_zomtec_em2012_domain_BetUser_password" property="password" z="M09H3BIjoFty1TokST+i+96nnL0="/>
             <table:column id="c_eu_zomtec_em2012_domain_BetUser_roles" property="roles" z="b3Eqz09ZF59gbGVWK4JMsoZvihE="/>
+            <table:column id="c_eu_zomtec_em2012_domain_BetUser_enabled" property="enabled" z="XAHCwn+qjxNb/b0X60CK6Yd6UfE="/>
         </table:table>
     </page:list>
 </div>
