--- a/src/main/webapp/WEB-INF/layouts/bet.jspx
+++ b/src/main/webapp/WEB-INF/layouts/bet.jspx
@@ -40,30 +40,36 @@
 <body>
 <div data-role="page">
 	<tiles:insertAttribute name="body" ignore="true" />
-	
 		<spring:url value="/teamgroups" var="admin_url"/>
 		<spring:url value="/resources/j_spring_security_logout" var="logout_url"/>
+		<spring:url value="/login" var="login_url"/>
 		<spring:url value="/start/index" var="games_url"/>
 		<spring:url value="/public/scores" var="scores_url"/>
-		<spring:url value="/public/news" var="news_url"/>
+		<spring:url value="/public/news" var="start_url"/>
+		<spring:url value="/public/register" var="register_url"/>
 		
 		<div data-role="footer" data-position="fixed">		
 			<div data-role="navbar">
 				<ul>
-					<li><a href="${news_url}" class="btnLogout" data-icon="info">News</a></li>
+					<li><a href="${start_url}" class="btnLogout" data-icon="info"><spring:message code="start"/></a></li>
 					
 					<sec:authorize access="isAuthenticated()">
-						<li><a href="${games_url}" class="btnLogout" data-icon="home">Games</a></li>
+						<li><a href="${games_url}" class="btnLogout" data-icon="home"><spring:message code="games"/></a></li>
 					</sec:authorize>
 					
-					<li><a href="${scores_url}" class="btnLogout" data-icon="star">Scores</a></li>
+					<li><a href="${scores_url}" class="btnLogout" data-icon="star"><spring:message code="scores"/></a></li>
 					
 					<sec:authorize ifAllGranted="ROLE_ADMIN">
-						<li><a href="${admin_url}" rel="external" data-icon="gear">Admin</a></li>
+						<li><a href="${admin_url}" rel="external" data-icon="gear"><spring:message code="admin"/></a></li>
 					</sec:authorize>
 					
 					<sec:authorize access="isAuthenticated()">
-						<li><a href="${logout_url}" rel="external" data-icon="delete">Logout</a></li>
+						<li><a href="${logout_url}" rel="external" data-icon="delete"><spring:message code="logout"/></a></li>
+					</sec:authorize>
+					
+					<sec:authorize access="!isAuthenticated()">
+						<li><a href="${register_url}" rel="external" data-icon="plus"><spring:message code="register"/></a></li>
+						<li><a href="${login_url}" rel="external" data-icon="check"><spring:message code="login"/></a></li>
 					</sec:authorize>
 				</ul>
 			</div><!-- /navbar -->
