--- a/src/main/webapp/WEB-INF/views/start/game.jspx
+++ b/src/main/webapp/WEB-INF/views/start/game.jspx
@@ -9,14 +9,8 @@
 
 	<div data-role="header" data-position="fixed">
 		<h1>
-			<c:choose>
-				<c:when test="${empty pageTitle}">
-					<spring:message code="application_name" htmlEscape="false"/>
-				</c:when>
-				<c:otherwise>
-					${pageTitle}
-				</c:otherwise>
-			</c:choose>
+			<spring:message code="team_${fn:toLowerCase(fn:replace(game.teamHome.name,' ','_'))}" text="${game.teamHome.name}" /> -
+			<spring:message code="team_${fn:toLowerCase(fn:replace(game.teamAway.name,' ','_'))}" text="${game.teamAway.name}" />
 		</h1>
 	</div>
 	<!-- /header -->
