--- a/src/main/webapp/WEB-INF/layouts/bet.jspx
+++ b/src/main/webapp/WEB-INF/layouts/bet.jspx
@@ -15,6 +15,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="format-detection" content="telephone=no"/>
 <title>
 	<spring:message code="application_name" htmlEscape="false"/>
 	<c:if test="${not empty pageTitle}">
