--- a/src/main/webapp/styles/bet.css
+++ b/src/main/webapp/styles/bet.css
@@ -1,3 +1,10 @@
+h2 {
+	font-size: 1.1em;
+}
+
+p {
+	font-size: 0.9em;
+}
 a.editBet, a.placeBet {
 	display: inline-block;
 	float: right;
@@ -5,28 +12,14 @@ a.editBet, a.placeBet {
 }
 
 span.readOnlyBetScore {
-	margin:10px;
-	float:right;
+	margin: 10px 10px 10px 4px;
+	float: right;
 }
 
 input.inputBet {
 	width: 20px;
 	display: inline-block;
 	text-align:center;
-}
-
-div.bubbleGroup {
-	border: 0 !important; 
-	background: 0 !important; 
-	padding-top: 8px !important;
-   	right: 41px !important;
-}
-
-div.bubbleGroup div.ui-li-count {
-	float: right;
-	display: inline-block;
-	position: static;
-	margin-left: 2px;
 }
 
 .left {
@@ -48,3 +41,79 @@ img.emLogo {
 }
 
 .block {text-align: justify;}
+
+
+/* bubble group */
+
+div.bubbleGroup {
+	border: 0 !important; 
+	background: 0 !important; 
+	padding-top: 8px !important;
+   	right: 41px !important;
+}
+
+div.bubbleGroup div.ui-li-count {
+	float: right;
+	display: inline-block;
+	position: static;
+	margin-left: 2px;
+	height: 14px;
+}
+
+@media only screen and (max-width: 460px) {
+	ul.portFix li div.bubbleGroup {
+	   	right: -70px !important;
+	   	position: relative !important;
+	   	display:block;
+	}
+	
+	ul.portFix li div.bubbleGroup div.ui-li-count {
+		margin-top:10px;
+	}
+}
+
+
+/* betContainer */
+.betContainer {
+	width: 130px;
+	float: right;
+	display: block;
+	margin-top: -44px;
+	margin-right: -12px;	
+	z-index: 5px;
+}
+
+@media only screen and (max-width: 460px) {
+	.betContainer {
+		margin-top: -18px;
+	}
+}
+
+.betImg {
+	float: right;
+	margin-top:10px;
+}
+
+.clearfix:after {
+    content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;
+}
+
+.ui-li-heading {
+	margin: 0.4em 0 !important;
+}
+
+.ui-li-desc {
+	margin: 0em 0 0.6em !important;
+}
+
+.ellipses {
+	display:block;
+	white-space: nowrap;
+	width: 100%;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
