--- a/src/main/webapp/WEB-INF/views/start/game.jspx
+++ b/src/main/webapp/WEB-INF/views/start/game.jspx
@@ -21,16 +21,16 @@
 				<div class="ui-block-a" style="text-align: center;">
 					<img
 						src="../../../images/team/normal/${game.teamHome.externalTeamId}.png" />
-					<h3>${game.teamHome.name}</h3>
+					<h3 class="ellipses">${game.teamHome.name}</h3>
 				</div>
 				<div class="ui-block-b" style="text-align: center;">
 					<h1>${game.scoreHome} : ${game.scoreAway}</h1>
-					${game.gameStatus}
+					<div class="ellipses">${game.gameStatus}</div>
 				</div>
 				<div class="ui-block-c" style="text-align: center;">
 					<img
 						src="../../../images/team/normal/${game.teamAway.externalTeamId}.png" />
-					<h3>${game.teamAway.name}</h3>
+					<h3 class="ellipses">${game.teamAway.name}</h3>
 				</div>
 			</div>
 			<!-- /grid-b -->
